<resources>
    <string name="app_name">MedexHealing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">인포메이션</string>
    <string name="ranadd">랜덤 추가 정보 항목</string>
    <string name="rantext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget pharetra diam. Curabitur pellentesque ipsum bibendum orci rhoncus, id auctor mi posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet venenatis elit, non iaculis felis.</string>
    <string name="sleep">숙면</string>
    <string name="breath">호흡법</string>
    <string name="streath">스트레칭</string>
    <string name="noise">코골이</string>
    <string name="menu_item_about">About App</string>
    <string name="about_app_version">App Version: %s</string>

    <string name="main_title">Home</string>

    <string name="esptouch_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>

    <string name="esptouch1_title">EspTouch</string>
    <string name="esptouch1_about_version">EspTouch Version: %s</string>
    <string name="esptouch1_ssid_title">SSID: </string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Password: </string>
    <string name="esptouch1_device_count_title">Device count: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Confirm</string>
    <string name="esptouch1_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>
    <string name="esptouch1_location_permission_title">⚠️Warning</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">Esptouch is configuring, please wait for a moment…</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">EspTouch 完成</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>

    <string name="esptouch2_title">EspTouch V2</string>
    <string name="esptouch2_about_version">EspTouch V2 Version: %s</string>
    <string name="esptouch2_ssid_label">SSID: </string>
    <string name="esptouch2_bssid_label">BSSID: </string>
    <string name="esptouch2_ip_label">IP: </string>
    <string name="esptouch2_password_label">Password</string>
    <string name="esptouch2_aes_key">AES Key</string>
    <string name="esptouch2_aes_key_error">AES Key must be null or 16 bytes data</string>
    <string name="esptouch2_custom_data">Custom Data</string>
    <string name="esptouch2_custom_data_error">Custom data can\'t be more than %d bytes</string>
    <string name="esptouch2_device_count">Device Count for Provisioning</string>

    <string name="esptouch2_provisioning_title">Provision</string>
    <string name="esptouch2_provisioning_stop">Stop</string>
    <string name="esptouch2_provisioning_result_exception">Catch exception: %s</string>
    <string name="esptouch2_provisioning_result_none">Not found any devices</string>
    <string name="esptouch2_provisioning_wifi_disconnect">Wi-Fi connection is disconnected</string>
    <string name="esptouch2_provisioning_result_bssid">BSSID: %1$s</string>
    <string name="esptouch2_provisioning_result_address">Address: %1$s</string>
</resources>