<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/nsr"
                android:text="@string/info"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranadd"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/nsr"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rantext"
                android:textSize="20sp"
                android:fontFamily="@font/nsr"
                android:textColor="@color/black"/>



        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dividingLine"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="추가 정보"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:fontFamily="@font/nsr"/>

        <Button
            android:id="@+id/sleepBtn"
            android:background="@drawable/home_button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sleep"
            android:fontFamily="@font/nsr"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:background="@drawable/home_button"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/breath"
            android:fontFamily="@font/nsr"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:background="@drawable/home_button"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/streath"
            android:fontFamily="@font/nsr"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:background="@drawable/home_button"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/noise"
            android:fontFamily="@font/nsr"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </LinearLayout>
</layout>