<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_esptouch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/apSsidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="SSID: "
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/apSsidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/apSsidLabel"
            app:layout_constraintStart_toEndOf="@id/apSsidLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/apBssidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="BSSID:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apSsidLabel" />

        <TextView
            android:id="@+id/apBssidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/apBssidLabel"
            app:layout_constraintStart_toEndOf="@id/apBssidLabel"
            app:layout_constraintTop_toTopOf="@id/apBssidLabel" />

        <LinearLayout
            android:id="@+id/apPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/apBssidLabel"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/apPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColorHint="@color/grey"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deviceCountLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/esptouch1_device_count_title"
            app:layout_constraintTop_toBottomOf="@id/apPasswordLayout">

            <EditText
                android:id="@+id/deviceCountEdit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:text="1" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/packageModeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/deviceCountLayout">

            <RadioButton
                android:id="@+id/packageBroadcast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/esptouch1_package_broadcast"
                android:textColor="@color/white"
                android:fontFamily="@font/nsr"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/packageMulticast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/esptouch1_package_multicast"
                android:textColor="@color/white"
                android:fontFamily="@font/nsr"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/messageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@id/packageModeGroup"
            app:layout_goneMarginStart="4dp" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/main_green"
            android:text="확인"
            style="@style/titleText4"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/testResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>



